styles: fix dark mode focus-visible styles

--- a/src/styles.css
+++ b/src/styles.css
@@ -79,20 +79,6 @@
   --breakpoint-*: initial;
   --breakpoint-tablet: 46rem;
   --breakpoint-laptop: 60rem;
-
-  /* Animations */
-  --animate-slide-out: slide-out 0.7s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
-
-  @keyframes slide-out {
-    0% {
-      transform: translateZ(0);
-      opacity: 1;
-    }
-    100% {
-      transform: translateZ(-1100px);
-      opacity: 0;
-    }
-  }
 }
 
 @layer base {
